--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "kushhot/module-twilio-sms-api",
     "description": "for sending sms on various case of magento 2 store",
     "require": {
-        "php": "~5.5.0|~5.6.0|~7.0.0|~7.1.0|~7.2.0",
+        "php": "~5.5.0|~5.6.0|~7.0.0|~7.1.0|~7.2.0|~7.3.0",
         "magento/product-community-edition": "2.3.1",
         "twilio/sdk": "*"
 
